@@ -1,9 +1,12 @@
 Changes from jTDS 1.2.4
 =======================
 
+12/06/2009 - Holger Rehn
+ o Implemented PreparedStatement.toString(), feature request [2909009].
+
 11/05/2009 - Holger Rehn
  o Corrected bug [2892493], NullPointException when receiving character NULL
-   values (SQL server 7.0 and later).
+   values (MS SQL Server 7.0 and later).
 
 11/04/2009 - Holger Rehn 
  o Corrected bug [2891775], fix for [2340241] has broken Java 1.3 compatibility.
